--- a/Scopus/Fetch Articles Abstracts From Scopus Search.ipynb
+++ b/Scopus/Fetch Articles Abstracts From Scopus Search.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,9 +254,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method DataFrame.info of                   Scopus_ID  \\\n",
+      "0     SCOPUS_ID:85035128299   \n",
+      "1     SCOPUS_ID:85038847134   \n",
+      "2     SCOPUS_ID:85036467319   \n",
+      "3     SCOPUS_ID:85038816447   \n",
+      "4     SCOPUS_ID:85034053217   \n",
+      "...                     ...   \n",
+      "1253  SCOPUS_ID:84978641606   \n",
+      "1254  SCOPUS_ID:84978903927   \n",
+      "1255  SCOPUS_ID:84961115864   \n",
+      "1256  SCOPUS_ID:84976330384   \n",
+      "1257  SCOPUS_ID:84929121341   \n",
+      "\n",
+      "                                               abstract           author  \\\n",
+      "0     This study develops a stochastic approach to t...           Lee M.   \n",
+      "1                                       (not available)       Sevlian R.   \n",
+      "2     Cloud computing has drastically transformed th...         Kumar J.   \n",
+      "3     Online reviews have been extensively studied i...            Ma Y.   \n",
+      "4     In this paper a new hybrid method combining va...          Naik J.   \n",
+      "...                                                 ...              ...   \n",
+      "1253                                    (not available)       Pedraza L.   \n",
+      "1254                                    (not available)       Bogaraj T.   \n",
+      "1255  The progressive application of Information and...       Gamarra C.   \n",
+      "1256                                    (not available)        Afilal M.   \n",
+      "1257                                    (not available)  Shamshirband S.   \n",
+      "\n",
+      "         pubDate                                              title  \n",
+      "0     2018-06-01  Modeling and forecasting hotel room demand bas...  \n",
+      "1     2018-06-01  A scaling law for short term load forecasting ...  \n",
+      "2     2018-04-01  Workload prediction in cloud using artificial ...  \n",
+      "3     2018-04-01  Effects of user-provided photos on hotel revie...  \n",
+      "4     2018-04-01  Short term wind power forecasting using hybrid...  \n",
+      "...          ...                                                ...  \n",
+      "1253  2016-07-01  Evaluation of nonlinear forecasts for radioele...  \n",
+      "1254  2016-07-01  Intelligent energy management control for inde...  \n",
+      "1255  2016-07-01  A knowledge discovery in databases approach fo...  \n",
+      "1256  2016-07-01  Forecasting the Emergency Department Patients ...  \n",
+      "1257  2016-07-01  A hybrid SVM-FFA method for prediction of mont...  \n",
+      "\n",
+      "[1258 rows x 5 columns]>\n",
+      "<bound method NDFrame.head of                   Scopus_ID  \\\n",
+      "0     SCOPUS_ID:85035128299   \n",
+      "1     SCOPUS_ID:85038847134   \n",
+      "2     SCOPUS_ID:85036467319   \n",
+      "3     SCOPUS_ID:85038816447   \n",
+      "4     SCOPUS_ID:85034053217   \n",
+      "...                     ...   \n",
+      "1253  SCOPUS_ID:84978641606   \n",
+      "1254  SCOPUS_ID:84978903927   \n",
+      "1255  SCOPUS_ID:84961115864   \n",
+      "1256  SCOPUS_ID:84976330384   \n",
+      "1257  SCOPUS_ID:84929121341   \n",
+      "\n",
+      "                                               abstract           author  \\\n",
+      "0     This study develops a stochastic approach to t...           Lee M.   \n",
+      "1                                       (not available)       Sevlian R.   \n",
+      "2     Cloud computing has drastically transformed th...         Kumar J.   \n",
+      "3     Online reviews have been extensively studied i...            Ma Y.   \n",
+      "4     In this paper a new hybrid method combining va...          Naik J.   \n",
+      "...                                                 ...              ...   \n",
+      "1253                                    (not available)       Pedraza L.   \n",
+      "1254                                    (not available)       Bogaraj T.   \n",
+      "1255  The progressive application of Information and...       Gamarra C.   \n",
+      "1256                                    (not available)        Afilal M.   \n",
+      "1257                                    (not available)  Shamshirband S.   \n",
+      "\n",
+      "         pubDate                                              title  \n",
+      "0     2018-06-01  Modeling and forecasting hotel room demand bas...  \n",
+      "1     2018-06-01  A scaling law for short term load forecasting ...  \n",
+      "2     2018-04-01  Workload prediction in cloud using artificial ...  \n",
+      "3     2018-04-01  Effects of user-provided photos on hotel revie...  \n",
+      "4     2018-04-01  Short term wind power forecasting using hybrid...  \n",
+      "...          ...                                                ...  \n",
+      "1253  2016-07-01  Evaluation of nonlinear forecasts for radioele...  \n",
+      "1254  2016-07-01  Intelligent energy management control for inde...  \n",
+      "1255  2016-07-01  A knowledge discovery in databases approach fo...  \n",
+      "1256  2016-07-01  Forecasting the Emergency Department Patients ...  \n",
+      "1257  2016-07-01  A hybrid SVM-FFA method for prediction of mont...  \n",
+      "\n",
+      "[1258 rows x 5 columns]>\n"
+     ]
+    }
+   ],
    "source": [
     "article_set=pd.read_csv(\"./data/scopus_search_base.csv\") \n",
     "print(article_set.info)\n",
@@ -265,10 +352,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Scopus_ID</th>\n",
+       "      <th>abstract</th>\n",
+       "      <th>author</th>\n",
+       "      <th>pubDate</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SCOPUS_ID:85035128299</td>\n",
+       "      <td>This study develops a stochastic approach to t...</td>\n",
+       "      <td>Lee M.</td>\n",
+       "      <td>2018-06-01</td>\n",
+       "      <td>Modeling and forecasting hotel room demand bas...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SCOPUS_ID:85038847134</td>\n",
+       "      <td>(not available)</td>\n",
+       "      <td>Sevlian R.</td>\n",
+       "      <td>2018-06-01</td>\n",
+       "      <td>A scaling law for short term load forecasting ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SCOPUS_ID:85036467319</td>\n",
+       "      <td>Cloud computing has drastically transformed th...</td>\n",
+       "      <td>Kumar J.</td>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>Workload prediction in cloud using artificial ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SCOPUS_ID:85038816447</td>\n",
+       "      <td>Online reviews have been extensively studied i...</td>\n",
+       "      <td>Ma Y.</td>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>Effects of user-provided photos on hotel revie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SCOPUS_ID:85034053217</td>\n",
+       "      <td>In this paper a new hybrid method combining va...</td>\n",
+       "      <td>Naik J.</td>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>Short term wind power forecasting using hybrid...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1253</th>\n",
+       "      <td>SCOPUS_ID:84978641606</td>\n",
+       "      <td>(not available)</td>\n",
+       "      <td>Pedraza L.</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>Evaluation of nonlinear forecasts for radioele...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1254</th>\n",
+       "      <td>SCOPUS_ID:84978903927</td>\n",
+       "      <td>(not available)</td>\n",
+       "      <td>Bogaraj T.</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>Intelligent energy management control for inde...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1255</th>\n",
+       "      <td>SCOPUS_ID:84961115864</td>\n",
+       "      <td>The progressive application of Information and...</td>\n",
+       "      <td>Gamarra C.</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>A knowledge discovery in databases approach fo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1256</th>\n",
+       "      <td>SCOPUS_ID:84976330384</td>\n",
+       "      <td>(not available)</td>\n",
+       "      <td>Afilal M.</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>Forecasting the Emergency Department Patients ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1257</th>\n",
+       "      <td>SCOPUS_ID:84929121341</td>\n",
+       "      <td>(not available)</td>\n",
+       "      <td>Shamshirband S.</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>A hybrid SVM-FFA method for prediction of mont...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1258 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Scopus_ID  \\\n",
+       "0     SCOPUS_ID:85035128299   \n",
+       "1     SCOPUS_ID:85038847134   \n",
+       "2     SCOPUS_ID:85036467319   \n",
+       "3     SCOPUS_ID:85038816447   \n",
+       "4     SCOPUS_ID:85034053217   \n",
+       "...                     ...   \n",
+       "1253  SCOPUS_ID:84978641606   \n",
+       "1254  SCOPUS_ID:84978903927   \n",
+       "1255  SCOPUS_ID:84961115864   \n",
+       "1256  SCOPUS_ID:84976330384   \n",
+       "1257  SCOPUS_ID:84929121341   \n",
+       "\n",
+       "                                               abstract           author  \\\n",
+       "0     This study develops a stochastic approach to t...           Lee M.   \n",
+       "1                                       (not available)       Sevlian R.   \n",
+       "2     Cloud computing has drastically transformed th...         Kumar J.   \n",
+       "3     Online reviews have been extensively studied i...            Ma Y.   \n",
+       "4     In this paper a new hybrid method combining va...          Naik J.   \n",
+       "...                                                 ...              ...   \n",
+       "1253                                    (not available)       Pedraza L.   \n",
+       "1254                                    (not available)       Bogaraj T.   \n",
+       "1255  The progressive application of Information and...       Gamarra C.   \n",
+       "1256                                    (not available)        Afilal M.   \n",
+       "1257                                    (not available)  Shamshirband S.   \n",
+       "\n",
+       "         pubDate                                              title  \n",
+       "0     2018-06-01  Modeling and forecasting hotel room demand bas...  \n",
+       "1     2018-06-01  A scaling law for short term load forecasting ...  \n",
+       "2     2018-04-01  Workload prediction in cloud using artificial ...  \n",
+       "3     2018-04-01  Effects of user-provided photos on hotel revie...  \n",
+       "4     2018-04-01  Short term wind power forecasting using hybrid...  \n",
+       "...          ...                                                ...  \n",
+       "1253  2016-07-01  Evaluation of nonlinear forecasts for radioele...  \n",
+       "1254  2016-07-01  Intelligent energy management control for inde...  \n",
+       "1255  2016-07-01  A knowledge discovery in databases approach fo...  \n",
+       "1256  2016-07-01  Forecasting the Emergency Department Patients ...  \n",
+       "1257  2016-07-01  A hybrid SVM-FFA method for prediction of mont...  \n",
+       "\n",
+       "[1258 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "article_set"
+   ]
   },
   {
    "cell_type": "code",
